fox sidebar bug that puts it behind our team cards in style.css

--- a/style.css
+++ b/style.css
@@ -213,6 +213,7 @@ html {
   right: -40rem;
   background-color: #fff;
   transition: right 0.5s;
+  z-index: 10;
 }
 
 .change .sidebar {
